# Graptolite-assistant

./: build.gradle
MyApplication62/: settings.gradle
MyApplication62/app/: build.gradle
MyApplication62/app/src/main/: AndroidManifest.xml
MyApplication62/app/src/main/assets/: lite.param
MyApplication62/app/src/main/cpp/: CMakeLists.txt  RRLib.cpp  native-lib.cpp  ocr.cpp  predict.cpp
MyApplication62/app/src/main/cpp/include/: RRLib.h  ocr.h  polygon.h
MyApplication62/app/src/main/java/com/example/myapplication/: BaikedetailActivity.java  ImageCutActivity.java  MainActivity.java  MeituActivity.java  MenuActivity.java  PredictActivity.java  RealPathFromUriUtils.java  baikeActivity.java
MyApplication62/app/src/main/java/com/example/myapplication/util/: BitmapUtil.java  PermissionUtil.java  Utils.java
MyApplication62/app/src/main/java/com/example/myapplication/widget/: BitmapView.java  CropImageView.java  MeituView.java
MyApplication62/app/src/main/res/drawable/: values2.xml
MyApplication62/app/src/main/res/layout/: acticity_predict.xml  activity_image_cut.xml  activity_main.xml  activity_meitu.xml  activity_menu.xml  baike.xml  baikedetail_layout.xml  menu.xml
MyApplication62/app/src/main/res/values/: customoverflow.xml  strings.xml  themes.xml  values.xml
MyApplication62/app/src/main/res/xml/: file_paths.xml
MyApplication62/filedialog/src/main/java/com/aqi00/lib/dialog/: FileSaveFragment.java
MyApplication62/gradle/wrapper/: gradle-wrapper.properties
